// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`single hotels query returns partial error for known type but unknown hotel ID 1`] = `
Object {
  "data": Object {
    "hotel": null,
  },
  "errors": Array [
    [GraphQLError: Requested hotel does not exist.],
  ],
}
`;

exports[`single hotels query throws error for unknown ID type (ID mishmash) 1`] = `
Object {
  "data": Object {
    "hotel": null,
  },
  "errors": Array [
    [GraphQLError: Hotel ID mishmash. You cannot query hotels with ID 'aWRlbnRpdHk6MjQ4NTM5' because this ID is not ID of the hotel. Please use opaque ID of the hotel.],
  ],
}
`;

exports[`single hotels query works with single hotel ID 1`] = `
Object {
  "data": Object {
    "hotel": Object {
      "id": "aG90ZWw6MTkzMzI=",
    },
  },
}
`;
